--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h3>in a moustache</h3>
-  <img src="./rosestache.jpg" alt="jacob in pink with a rose boutinier at a soundboard at a wedding">
+  <img src="./_rosestache.jpg" alt="jacob in pink with a rose boutinier at a soundboard at a wedding">
   <h3>in a hat</h3>
   <img src="./hat.jpg" alt="jacob in gross pimp hat in high school or something">
 </body>
